--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,10 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.7'
+//        classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.1.1'
+
+        classpath 'me.tatarka:gradle-retrolambda:3.2.2'
     }
 }
 
